# senior-game-engine

./: .gitignore  .gitmodules  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  imgui.ini
cgx/: CMakeLists.txt
cgx/data/objects/big_flashlight/: flashlight.mtl
cgx/include/: cpgx.h  resources_paths.h
cgx/shaders/: blending.fs  blending.vs  grid.fs  grid.vs  model.fs  model.vs  skybox.fs  wireframe.fs
cgx/src/components/: light_component.h  render_component.h  transform.h  transform_component.h
cgx/src/core/: engine.cpp  engine.h  imgui_handler.cpp  imgui_handler.h  input_handler.cpp  input_handler.h  window.cpp  window.h
cgx/src/ecs/: component.h  component_array.h  component_manager.cpp  component_manager.h  ecs_manager.cpp  ecs_manager.h  ecs_types.h  entity.h  entity_manager.cpp  entity_manager.h  i_component_array.h  i_system.h  system_manager.cpp  system_manager.h
cgx/src/event/: event_handler.cpp  event_handler.h
cgx/src/gui/: imgui_ecs_system.cpp  imgui_ecs_system.h  imgui_manager.cpp  imgui_manager.h
cgx/src/render/: camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  model_old.cpp  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  texture.cpp  texture.h
cgx/src/utility/: logging.cpp  logging.h
data/shaders/: lighting.fs  lighting.vs  model.fs  model.vs  msaa_post.fs  skybox.vs
engine/: CMakeLists.txt
engine/include/: app.h  camera.h  engine.h  imgui_handler.h  imguiwindow.h  input.h  input_handler.h  logging.h  material.h  mesh.h  model.h  shader.h  window.h
engine/include/Components/: Transform.h
engine/include/ECS/: ComponentManager.h  ECSManager.h  Entity.h  EntityManager.h  IComponentArray.h  ISystem.h  SystemManager.h
engine/resources/soccerball/: ball.mtl
engine/shaders/: model_loading.fs
engine/src/: app.cpp  camera.cpp  engine.cpp  event_handler.cpp  imgui_handler.cpp  imguiwindow.cpp  input.cpp  input_handler.cpp  logging.cpp  material.cpp  mesh.cpp  model.cpp  shader.cpp  window.cpp
engine/src/ECS/: ComponentManager.cpp  ECSManager.cpp  EntityManager.cpp  IComponentArray.cpp  SystemManager.cpp
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt
examples/sandbox/include/: cube_map.h  cubemap.h  grid.h  primitives.h  sandbox.h
examples/sandbox/src/: cube_map.cpp  cubemap.cpp  grid.cpp  sandbox.cpp
include/: cgx.h  engine.h
include/core/: common.h  engine.h  input_handler.h  input_manager.h  physics_system.h  time.h  window.h  window_manager.h
include/ecs/: common.h  component_array.h  component_manager.h  component_registry.h  ecs_manager.h  ecs_provider.h  ecs_types.h  entity_manager.h  entity_registry.h  event.h  event_manager.h  i_component_array.h  i_system.h  system.h  system_manager.h  system_registry.h
include/ecs/components/: camera_component.h  light_component.h  render_component.h  rigid_body.h  transform_component.h
include/ecs/event/: event.h  event_delegate.h  event_dispatcher.h  event_handler.h  i_event.h  i_event_delegate.h  i_event_dispatcher.h  i_event_listener.h
include/ecs/events/: engine_events.h  input_events.h
include/event/: event_handler.h
include/gui/: imgui_ecs_system.h  imgui_ecs_window.h  imgui_manager.h  imgui_performance_window.h  imgui_render_settings_window.h  imgui_render_window.h  imgui_viewport_window.h  imgui_window.h
include/input/: input_manager.h  input_types.h
include/render/: camera.h  camera_system.h  framebuffer.h  material.h  mesh.h  model.h  resource_manager.h  shader.h  texture.h
include/utility/: logging.h  paths.h  paths.h.in
sandbox/: CMakeLists.txt
sandbox/include/: sandbox.h  sandbox_app.h
sandbox/src/: sandbox.cpp  sandbox_app.cpp
src/: engine.cpp
src/core/: engine.cpp  input_handler.cpp  input_manager.cpp  physics_system.cpp  time.cpp  window.cpp  window_manager.cpp
src/ecs/: component_manager.cpp  component_registry.cpp  ecs_manager.cpp  ecs_provider.cpp  entity_manager.cpp  entity_registry.cpp  event_manager.cpp  system_manager.cpp  system_registry.cpp
src/ecs/event/: event_handler.cpp  i_event.cpp  i_event_listener.cpp
src/event/: event_handler.cpp
src/gui/: imgui_ecs_system.cpp  imgui_ecs_window.cpp  imgui_manager.cpp  imgui_performance_window.cpp  imgui_render_settings_window.cpp  imgui_render_window.cpp  imgui_viewport_window.cpp  imgui_window.cpp
src/input/: input_manager.cpp
src/render/: camera.cpp  framebuffer.cpp  material.cpp  mesh.cpp  model.cpp  resource_manager.cpp  shader.cpp  texture.cpp
src/utility/: logging.cpp  resources_paths.h.in
